# water

./: CMakeLists.txt  LICENSE  README.md  preset1.yaml  preset2.yaml
data/shaders/: AnimateDSpectrum_fragment.glsl  AnimateHeightSpectrum_fragment.glsl  AnimateSSpectrum_fragment.glsl  FFT_fragment.glsl  Heightmap_fragment.glsl  InitSpectrum_fragment.glsl  NormalMap_fragment.glsl  Passthrough_vertex.glsl  ScreenRect_fragment.glsl  Sky_fragment.glsl  Sky_vertex.glsl  WaterCPU_fragment.glsl  WaterCPU_vertex.glsl  WaterGPU_fragment.glsl  WaterGPU_vertex.glsl
src/: headers.h  main.cpp
src/water/anim/: Animator.cpp  Animator.h  AnimatorDFT.cpp  AnimatorDFT.h  AnimatorDFT_GPU.cpp  AnimatorDFT_GPU.h  AnimatorGerstner.cpp  AnimatorGerstner.h  PhillipsSpectrum.cpp  PhillipsSpectrum.h  Utils.cpp  Utils.h
src/water/math/: Complex.h  FourierTransform.cpp  FourierTransform.h  FourierTransform_GPU.cpp  FourierTransform_GPU.h
src/water/render/: CubeMap.cpp  CubeMap.h  FrameBuffer.cpp  FrameBuffer.h  GLWrappers.cpp  GLWrappers.h  Program.cpp  Program.h  ScreenRectangle.cpp  ScreenRectangle.h  ScreenToNDC.cpp  ScreenToNDC.h  Texture.cpp  Texture.h  Transforms.h  Window.cpp  Window.h
src/water/scene/: Ocean.cpp  Ocean.h  Patch.cpp  Patch.h  Scene.cpp  Scene.h  Settings.cpp  Settings.h  Sky.cpp  Sky.h
src/water/utils/: Log.cpp  Log.h  SettingsReader.cpp  SettingsReader.h
test/water-tests/: TestFFTGPU.h  TestPhillips.h  TestScreenToNDC.h  main.cpp  tst_full.h
